--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                 <div class="col-lg-6">
                     <h1 class="display-4 text-uppercase mb-4">Pinnacle of Communication: Your 360-Degree Digital Marketing Company</h1>
                     <h5 class="text-uppercase text-primary mb-3">At IAlpha, we go beyond being just a digital marketing agency in Dubai – we become your trusted partner in achieving digital excellence. We commit to delivering outstanding results through a comprehensive suite of services tailored to elevate your online presence and drive success for your business </h5>
-                    <h1 class="display-4 text-uppercase mb-3">Pinnacle of Communication: Our Commitment to You:</h1>
+                    <h1 class="display-4 text-uppercase mb-3">Our Commitment to You:</h1>
                     <p class="mb-4">At IAlpha, we recognize that every business is unique, as are your digital marketing needs. That's why we don't offer one-size-fits-all solutions. We collaborate closely with you to understand your goals, target audience, and industry landscape to develop customized strategies that deliver tangible results.</p>
-                    <p class="mb-4">Our team of dedicated professionals possesses in-depth knowledge of the dynamic digital marketing landscape of Dubai and the UAE. We proactively stay ahead of industry trends and leverage cutting-edge technologies to ensure your brand always stays at the forefront of your target market's mind.</p>
-                    <p class="mb-4">When you choose IAlpha as your partner, you're not merely hiring a digital marketing agency; you're making an investment in a long-term relationship.centered around your success. We gauge our success by your accomplishments and remain unwavering in our commitment to helping you achieve your business objectives.</p>
-                    <p class="mb-4">Elevate your digital presence, drive growth, and attain remarkable results with IAlpha – your trusted digital marketing agency in Dubai.</p>
+                    <p>Our team of dedicated professionals possesses in-depth knowledge of the dynamic digital marketing landscape of Dubai and the UAE. We proactively stay ahead of industry trends and leverage cutting-edge technologies to ensure your brand always stays at the forefront of your target market's mind.</p>
+                    <p>When you choose IAlpha as your partner, you're not merely hiring a digital marketing agency; you're making an investment in a long-term relationship.centered around your success. We gauge our success by your accomplishments and remain unwavering in our commitment to helping you achieve your business objectives.</p>
+                    <p>Elevate your digital presence, drive growth, and attain remarkable results with IAlpha – your trusted digital marketing agency in Dubai.</p>
                     <a href="" class="btn btn-primary text-uppercase py-3 px-5">Read More</a>
                 </div>
             </div>
