--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-4 text-uppercase mb-4">Pinnacle of Communication: Your 360-Degree Digital Marketing Company</h1>
-                    <h5 class="text-uppercase text-primary mb-3">At IAlpha, we go beyond being just a digital marketing agency in Dubai – we become your trusted partner in achieving digital excellence. We commit to delivering outstanding results through a comprehensive suite of services tailored to elevate your online presence and drive success for your business </h5>
+                    <h1 class="display-4 text-uppercase mb-4">Your 360-Degree Digital Marketing Company</h1>
+                    <h5 class="text-uppercase text-primary mb-3">At IAlpha, we go beyond being just a digital marketing agency– we become your trusted partner in achieving digital excellence. We commit to delivering outstanding results through a comprehensive suite of services tailored to elevate your online presence and drive success for your business </h5>
                     <h1 class="display-4 text-uppercase mb-3">Our Commitment to You:</h1>
                     <p class="mb-4">At IAlpha, we recognize that every business is unique, as are your digital marketing needs. That's why we don't offer one-size-fits-all solutions. We collaborate closely with you to understand your goals, target audience, and industry landscape to develop customized strategies that deliver tangible results.</p>
                     <p>Our team of dedicated professionals possesses in-depth knowledge of the dynamic digital marketing landscape of Dubai and the UAE. We proactively stay ahead of industry trends and leverage cutting-edge technologies to ensure your brand always stays at the forefront of your target market's mind.</p>
